fix: prevent horizontal scrolling in wizard

--- a/assets/src/js/admin/onboarding-wizard/components/wizard/style.scss
+++ b/assets/src/js/admin/onboarding-wizard/components/wizard/style.scss
@@ -2,6 +2,7 @@
 	min-height: 100%;
 	height: auto;
 	width: 100%;
+	overflow-x: hidden;
 
 	color: #424242;
 	font-family: Montserrat, arial, sans-serif;
